--- a/back-end/.env.sample
+++ b/back-end/.env.sample
@@ -1,5 +1,20 @@
-DATABASE_URL=enter-your-production-database-url-here
-DATABASE_URL_DEVELOPMENT=enter-your-development-database-url-here
-DATABASE_URL_TEST=enter-your-test-database-url-here
-DATABASE_URL_PREVIEW=enter-your-preview-database-url-here
+// .env file
+DATABASE_URL_PREFIX=enter-your-database-url-prefix-here
 LOG_LEVEL=info
+
+// config.js file
+require('dotenv').config();
+
+const logLevel = process.env.LOG_LEVEL;
+
+const databaseUrls = {
+  production: `${process.env.DATABASE_URL_PREFIX}production`,
+  development: `${process.env.DATABASE_URL_PREFIX}development`,
+  test: `${process.env.DATABASE_URL_PREFIX}test`,
+  preview: `${process.env.DATABASE_URL_PREFIX}preview`,
+};
+
+module.exports = {
+  logLevel,
+  databaseUrls,
+};
